--- a/conocenos.html
+++ b/conocenos.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-           f <div id="header" class="flexbox">
+            <div id="header" class="flexbox">
                 <a class="item" href="index.html"> 
                     <img src="logo.png" style="width: 50%;"/>
                 </a>
