--- a/conocenos.html
+++ b/conocenos.html
@@ -52,6 +52,7 @@
                 <h3>Redes Sociales</h3>
                 <p>Lorem ipsum dolor sit amet.</p>
                 <p>Lorem ipsum dolor sit amet.</p>
+                <p>Lorem ipsum dolor sit amet.</p>
             </div>
                 <div class="col3">
                     <h3>Contacto</h3>
