--- a/conocenos.html
+++ b/conocenos.html
@@ -53,6 +53,7 @@
                 <p>Lorem ipsum dolor sit amet.</p>
                 <p>Lorem ipsum dolor sit amet.</p>
                 <p>Lorem ipsum dolor sit amet.</p>
+                <p>Lorem ipsum dolor sit amet.</p>
             </div>
                 <div class="col3">
                     <h3>Contacto</h3>
