--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div id="header" class="flexbox">
             <a class="item" href="index.html"> 
-                <img src="logo.png" style="width: 50%;"/>
+                <img src="CSS/logo.png" style="width: 50%;"/>
             </a>
             <a class="item" href="conocenos.html">
                 <div class="item">CONOCENOS</div>
@@ -15,14 +15,13 @@
             <div class="item">MENU</div>
             <div class="item">CONTACTO</div>
         </div>
-
 <div class="container">
-    <img src="fondo.jpg" style="width:100%;">
+    <img src="CSS/fondo.jpg" style="width:100%;">
     <div class="centrado">Bienvenidos al Templo de la Milanesa</div>
 </div>
 
 <div class="flexbox1" style="margin: 2.5%;">
-  <img src="mila.png" style="float: left;width: 55%;">
+  <img src="CSS/mila.png" style="float: left;width: 55%;">
   <div style="float:right;">
       <h1>Somos SacraMila</h1>
       <h3>Sabemos que la veneras</h3>
