--- a/conocenos.html
+++ b/conocenos.html
@@ -8,7 +8,7 @@
         <header>
             <div id="header" class="flexbox">
                 <a class="item" href="index.html"> 
-                    <img src="logo.png" style="width: 50%;"/>
+                    <img src="CSS/logo.png" style="width: 50%;"/>
                 </a>
                 <a class="item" href="conocenos.html" style="text-decoration: none;">
                     <div clasfs="item">CONOCENOS</div>
