--- a/index.html
+++ b/index.html
@@ -36,6 +36,38 @@
   </div>
 </div>
 
+<footer>
+  <div class="footer">
+      <div class="col1">
+      <h3>SacraMila</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <p>Lorem ipsum dolor sit amet.</p>     
+  </div>           
+      <div class="col2">
+      <h3>Redes Sociales</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <p>Lorem ipsum dolor sit amet.</p>
+  </div>
+      <div class="col3">
+          <h3>Contacto</h3>
+          <form>
+              <input type="text" placeholder="Nombre">
+              <br>
+              <input type="text" placeholder="Correo Electronico">
+              <br>
+              <input type="text" placeholder="Asunto">
+              <br>
+              <input type="text" placeholder="Mensaje">
+              <br>
+              <button type="submit">Enviar</button>
+          </form>
+  </div>
+</footer>
+
 <script>
 
 window.onscroll = function() {scrollFunction()};
