--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-        <link rel="stylesheet" href="CSS/estilos.css">
-        <title>SacraMila - El Templo de la milanesa</title>
-    </head>
-    <body>
-        <div id="header" class="flexbox">
-            <a class="item" href="index.html"> 
-                <img src="CSS/logo.png" style="width: 50%;"/>
-            </a>
-            <a class="item" href="conocenos.html">
-                <div class="item">CONOCENOS</div>
-            </a>
-            <div class="item">MENU</div>
-            <div class="item">CONTACTO</div>
-        </div>
+  <link rel="stylesheet" href="CSS/estilos.css">
+  <title>SacraMila - El Templo de la milanesa</title>
+</head>
+<body>
+  <div id="header" class="flexbox">
+    <a class="item" href="index.html"> 
+      <img src="CSS/logo.png" style="width: 50%;"/>
+    </a>
+    <a class="item" href="conocenos.html">
+      <div class="item">CONOCENOS</div>
+    </a>
+    <a class="item" href="menu.html">
+      <div class="item">MENU</div>
+    </a>
+    <a class="item" href="menu.html">
+      <div class="item">CONTACTO</div>
+    </a>
+  </div>
 <div class="container">
-    <img src="CSS/fondo.jpg" style="width:100%;">
-    <div class="centrado">Bienvenidos al Templo de la Milanesa</div>
+  <img src="CSS/fondo.jpg" style="width:100%;">
+  <div class="centrado">Bienvenidos al Templo de la Milanesa</div>
 </div>
 
 <div class="flexbox1" style="margin: 2.5%;">
