--- a/conocenos.html
+++ b/conocenos.html
@@ -8,13 +8,17 @@
         <header>
             <div id="header" class="flexbox">
                 <a class="item" href="index.html"> 
-                    <img src="CSS/logo.png" style="width: 50%;"/>
+                  <img src="CSS/logo.png" style="width: 50%;"/>
                 </a>
-                <a class="item" href="conocenos.html" style="text-decoration: none;">
-                    <div clasfs="item">CONOCENOS</div>
+                <a class="item" href="conocenos.html">
+                  <div class="item">CONOCENOS</div>
                 </a>
-                <div class="item">MENU</div>
-                <div class="item">CONTACTO</div>
+                <a class="item" href="menu.html">
+                  <div class="item">MENU</div>
+                </a>
+                <a class="item" href="menu.html">
+                  <div class="item">CONTACTO</div>
+                </a>
               </div>
         </header>
         <main>
