--- a/conocenos.html
+++ b/conocenos.html
@@ -5,7 +5,7 @@
         <title>SacraMila - El Templo de la milanesa</title>
     </head>
     <body>
-
+        <header>
             <div id="header" class="flexbox">
                 <a class="item" href="index.html"> 
                   <img src="CSS/logo.png" style="width: 50%;"/>
@@ -20,7 +20,7 @@
                   <div class="item">CONTACTO</div>
                 </a>
               </div>
-
+        </header>
         <main>
         <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsf</p>
         <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsf</p>
