--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 <img src="CSS/fondo.jpg" style="width:100%;">
 <div class="centrado">Bienvenidos al Templo de la Milanesa</div>
 </div>
-
 <div class="flexbox1" style="margin: 2.5%;">
 <img src="CSS/mila.png" style="float: left;width: 55%;">
 <div style="float:right;">
@@ -39,7 +38,6 @@
 <h3>Que nosotros te ponemos la iglesia</h3>
 </div>
 </div>
-
 <footer>
 <div class="footer">
 <div class="col1">
@@ -71,25 +69,6 @@
 </form>
 </div>
 </footer>
-
-<script>
-
-window.onscroll = function() {scrollFunction()};
-
-function scrollFunction() {
-  if (document.body.scrollTop > 50 || document.documentElement.scrollTop > 50) {
-    document.getElementById("header").style.height = "10%";
-    document.getElementById("header").style.backgroundColor = "rgba(0, 0, 0, 0.8)";
-    document.getElementById("header").style.fontSize = "80%";
-  }
-
-  else {
-    document.getElementById("header").style.height = "15%";
-    document.getElementById("header").style.backgroundColor = "black";
-    document.getElementById("header").style.fontSize = "100%";
-  }
-}
-</script>
-
+<script src="script.js"></script> 
 </body>
 </html>
