--- a/conocenos.html
+++ b/conocenos.html
@@ -65,8 +65,11 @@
                         <input type="text" placeholder="Asunto">
                         <br>
                         <input type="text" placeholder="Mensaje">
+                        <style>
+                            
+                        </style>
                         <br>
-                        <button type="submit">Enviar</button>
+                            <button type="submit">Enviar</button>
                     </form>
             </div>
         </footer>
