--- a/conocenos.html
+++ b/conocenos.html
@@ -22,6 +22,12 @@
               </div>
         </header>
         <main>
+
+        <div class="container">
+            <img src="CSS/fondo.jpg" style="width:100%;">
+            <div class="centrado">Bienvenidos al Templo de la Milanesa</div>
+        </div>
+
         <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsf</p>
         <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsf</p>
         <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsfpasdf,msañfmsf</p>
