--- a/conocenos.html
+++ b/conocenos.html
@@ -51,14 +51,14 @@
                 <p>Lorem ipsum dolor sit amet.</p>
                 <p>Lorem ipsum dolor sit amet.</p>
                 <p>Lorem ipsum dolor sit amet.</p>     
-            </div>           
+                </div>           
                 <div class="col2">
                 <h3>Redes Sociales</h3>
                 <p>Lorem ipsum dolor sit amet.</p>
                 <p>Lorem ipsum dolor sit amet.</p>
                 <p>Lorem ipsum dolor sit amet.</p>
                 <p>Lorem ipsum dolor sit amet.</p>
-            </div>
+                </div>
                 <div class="col3">
                     <h3>Contacto</h3>
                     <form>
@@ -68,13 +68,11 @@
                         <br>
                         <input type="text" placeholder="Asunto">
                         <br>
-                        <input type="text" placeholder="Mensaje">
-                        <style>
-                            
-                        </style>
+                        <input type="text" placeholder="Mensaje" style="width: 350px; height: 150px;">
                         <br>
-                            <button type="submit">Enviar</button>
+                        <button type="submit">Enviar</button>
                     </form>
+                </div>
             </div>
         </footer>
         <script>
