--- a/conocenos.html
+++ b/conocenos.html
@@ -51,11 +51,15 @@
         <footer>
             <div class="footer">
                 <div class="col1">
-                <h3>SacraMila</h3>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>     
+                <img src="CSS/logo.png" style="width: 40%;"></img>
+                <p>Creado por el amor a las milanesas</p>
+                <p>Av. Patria 293</p>
+                <a class="col1" href="Reservas.html">
+                  <div style="text-decoration: none;">Reserva acá</div>
+                </a>   
+                <a class="col1" href="menu.html">
+                  <div style="text-decoration: none;">Nuestra carta</div>
+                </a>   
                 </div>           
                 <div class="col2">
                 <h3>Redes Sociales</h3>
@@ -67,13 +71,13 @@
                 <div class="col3">
                     <h3>Contacto</h3>
                     <form>
-                        <input type="text" placeholder="Nombre">
+                        <textarea class="userInput" placeholder="Nombre"></textarea>
                         <br>
-                        <input type="text" placeholder="Correo Electronico">
+                        <textarea class="userInput" placeholder="Correo Electronico"></textarea>
                         <br>
-                        <input type="text" placeholder="Asunto">
+                        <textarea class="userInput" placeholder="Asunto"></textarea>
                         <br>
-                        <input type="text" placeholder="Mensaje" style="width: 350px; height: 150px;">
+                        <textarea class="userInput" placeholder="Mensaje" style="width: 350px; height: 150px;"></textarea>
                         <br>
                         <button type="submit">Enviar</button>
                     </form>
