--- a/conocenos.html
+++ b/conocenos.html
@@ -55,10 +55,10 @@
                 <p>Creado por el amor a las milanesas</p>
                 <p>Av. Patria 293</p>
                 <a class="col1" href="Reservas.html">
-                  <div style="text-decoration: none;">Reserva acá</div>
+                  <div style="text-decoration: none; color:rgb(255, 255, 255)">Reserva acá</div>
                 </a>   
                 <a class="col1" href="menu.html">
-                  <div style="text-decoration: none;">Nuestra carta</div>
+                  <div style="text-decoration: none; color:rgb(255, 255, 255)">Nuestra carta</div>
                 </a>   
                 </div>           
                 <div class="col2">
