--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="flexbox1" style="margin: 2.5%;">
       <img src="CSS/mila.png" style="float: left;width: 55%;">
-      <div style="float:right;">
+      <div style="float:right;margin-left: 10%;">
         <h1>Somos SacraMila</h1>
         <h3>Sabemos que la veneras</h3>
         <h3>Por eso nor encargamos de hacerle un templo</h3>
@@ -44,6 +44,43 @@
         <h3>Que nosotros te ponemos la iglesia</h3>
       </div>
     </div>
+
+    <footer>
+      <div class="footer">
+          <div class="col1">
+          <img src="CSS/logo.png" style="width: 40%;"></img>
+          <p>Creado por el amor a las milanesas</p>
+          <p>Av. Patria 293</p>
+          <a class="col1" href="Reservas.html">
+            <div style="text-decoration: none;">Reserva acá</div>
+          </a>   
+          <a class="col1" href="menu.html">
+            <div style="text-decoration: none;">Nuestra carta</div>
+          </a>   
+          </div>           
+          <div class="col2">
+          <h3>Redes Sociales</h3>
+          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+          <div class="col3">
+              <h3>Contacto</h3>
+              <form>
+                  <textarea class="userInput" placeholder="Nombre"></textarea>
+                  <br>
+                  <textarea class="userInput" placeholder="Correo Electronico"></textarea>
+                  <br>
+                  <textarea class="userInput" placeholder="Asunto"></textarea>
+                  <br>
+                  <textarea class="userInput" placeholder="Mensaje" style="width: 350px; height: 150px;"></textarea>
+                  <br>
+                  <button type="submit">Enviar</button>
+              </form>
+          </div>
+      </div>
+  </footer>
 
     <script src="scriptheader.js"></script> 
 
