--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <a class="item" href="menu.html">
         <div class="item">MENU</div>
       </a>
-      <a class="item" href="menu.html">
-        <div class="item">CONTACTO</div>
+      <a class="item" href="reservas.html">
+        <div class="item">RESERVA</div>
       </a>
     </div>
 
