--- a/conocenos.html
+++ b/conocenos.html
@@ -16,8 +16,8 @@
                 <a class="item" href="menu.html">
                   <div class="item">MENU</div>
                 </a>
-                <a class="item" href="menu.html">
-                  <div class="item">CONTACTO</div>
+                <a class="item" href="reservas.html">
+                  <div class="item">RESERVA</div>
                 </a>
               </div>
         </header>
@@ -54,7 +54,7 @@
                 <img src="CSS/logo.png" style="width: 40%;"></img>
                 <p>Creado por el amor a las milanesas</p>
                 <p>Av. Patria 293</p>
-                <a class="col1" href="Reservas.html">
+                <a class="col1" href="reservas.html">
                   <div style="text-decoration: none; color:rgb(255, 255, 255)">Reserva acá</div>
                 </a>   
                 <a class="col1" href="menu.html">
