--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
           <p>Lorem ipsum dolor sit amet.</p>
           <p>Lorem ipsum dolor sit amet.</p>
           <p>Lorem ipsum dolor sit amet.</p>
+          <p>Lorem ipsum dolor sit amet.</p>
+
           </div>
           <div class="col3">
               <h3>Contacto</h3>
