--- a/conocenos.html
+++ b/conocenos.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="CSS/estilos.css">
-        <title>SacraMila - El Templo de la milanesa</title>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+      <link rel="stylesheet" href="CSS/estilos.css">
+      <title>SacraMila - El Templo de la milanesa</title>
     </head>
     <body>
         <header>
@@ -63,10 +64,10 @@
                 </div>           
                 <div class="col2">
                 <h3>Redes Sociales</h3>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p><i class="bi bi-facebook"></i> SacraMila</p>
+                <p><i class="bi bi-twitter"></i> SacraMila.Oficial</p>
+                <p><i class="bi bi-instagram"></i> ElTemploDeLaMilanesa</p>
+                <p><i class="bi bi-whatsapp"></i> (351) 482-2556</p>
                 </div>
                 <div class="col3">
                     <h3>Contacto</h3>
@@ -84,6 +85,6 @@
                 </div>
             </div>
         </footer>
-        <script src="scriptheader.js"></script> 
+        <script src="scriptheader.js"></script>
     </body>
 </html>
