--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
           <p>Creado por el amor a las milanesas</p>
           <p>Av. Patria 293</p>
           <a class="col1" href="Reservas.html">
-            <div style="text-decoration: none;">Reserva acá</div>
+            <div style="text-decoration: none; color:rgb(255, 255, 255)">Reserva acá</div>
           </a>   
           <a class="col1" href="menu.html">
-            <div style="text-decoration: none;">Nuestra carta</div>
+            <div style="text-decoration: none; color:rgb(255, 255, 255)">Nuestra carta</div>
           </a>   
           </div>           
           <div class="col2">
           <h3>Redes Sociales</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p><i class="bi bi-facebook"></i> SacraMila</p>
+          <p><i class="bi bi-twitter"></i> SacraMila.Oficial</p>
+          <p><i class="bi bi-instagram"></i> ElTemploDeLaMilanesa</p>
+          <p><i class="bi bi-whatsapp"></i> (351) 482-2556</p>
           </div>
           <div class="col3">
               <h3>Contacto</h3>
