--- a/reservas.html
+++ b/reservas.html
@@ -1,91 +1,66 @@
 <!DOCTYPE html>
-
 <html>
+    <head>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+      <link rel="stylesheet" href="CSS/estilos.css">
+      <title>SacraMila - El Templo de la milanesa</title>
+    </head>
+    <body>
+        <header>
+            <div id="header" class="flexbox">
+                <a class="item" href="index.html"> 
+                  <img src="CSS/logo.png" style="width: 50%;"/>
+                </a>
+                <a class="item" href="conocenos.html">
+                  <div class="item">CONOCENOS</div>
+                </a>
+                <a class="item" href="menu.html">
+                  <div class="item">MENU</div>
+                </a>
+                <a class="item" href="menu.html">
+                  <div class="item">CONTACTO</div>
+                </a>
+              </div>
+        </header>
+        <main>
 
-  <head>
-    <link rel="stylesheet" href="CSS/estilos.css">
-    <title>SacraMila - El Templo de la milanesa</title>
-  </head>
-
-  <body>
-
-    <div id="header" class="flexbox">
-      <a class="item" href="index.html"> 
-        <img src="CSS/logo.png" style="width: 50%;"/>
-      </a>
-      <a class="item" href="conocenos.html">
-        <div class="item">CONOCENOS</div>
-      </a>
-      <a class="item" href="menu.html">
-        <div class="item">MENU</div>
-      </a>
-      <a class="item" href="reservas.html">
-        <div class="item">RESERVA</div>
-      </a>
-    </div>
-
-    <div class="container">
-      <img src="CSS/fondo.jpg" style="width:100%;">
-      <div class="centrado">Bienvenidos al Templo de la Milanesa</div>
-    </div>
-
-    <div class="flexbox1" style="margin: 2.5%;">
-      <img src="CSS/mila.png" style="float: left;width: 55%;">
-      <div style="float:right;margin-left: 10%;">
-        <h1>Somos SacraMila</h1>
-        <h3>Sabemos que la veneras</h3>
-        <h3>Por eso nor encargamos de hacerle un templo</h3>
-        <h3>Somos expertos en milanesas</h3>
-        <h3>Desde la virgen Suprema</h3>
-        <h3>Hasta San Napolitana</h3>
-        <h3>Vení a adorar con amigos, con familia, o solo</h3>
-        <h3>La intención es lo que cuenta</h3>
-        <h3>Vos traé el apetito</h3>
-        <h3>Que nosotros te ponemos la iglesia</h3>
-      </div>
-    </div>
-
-    <footer>
-      <div class="footer">
-          <div class="col1">
-          <img src="CSS/logo.png" style="width: 40%;"></img>
-          <p>Creado por el amor a las milanesas</p>
-          <p>Av. Patria 293</p>
-          <a class="col1" href="Reservas.html">
-            <div style="text-decoration: none;">Reserva acá</div>
-          </a>   
-          <a class="col1" href="menu.html">
-            <div style="text-decoration: none;">Nuestra carta</div>
-          </a>   
-          </div>           
-          <div class="col2">
-          <h3>Redes Sociales</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-
-          </div>
-          <div class="col3">
-              <h3>Contacto</h3>
-              <form>
-                  <textarea class="userInput" placeholder="Nombre"></textarea>
-                  <br>
-                  <textarea class="userInput" placeholder="Correo Electronico"></textarea>
-                  <br>
-                  <textarea class="userInput" placeholder="Asunto"></textarea>
-                  <br>
-                  <textarea class="userInput" placeholder="Mensaje" style="width: 350px; height: 150px;"></textarea>
-                  <br>
-                  <button type="submit">Enviar</button>
-              </form>
-          </div>
-      </div>
-  </footer>
-
-    <script src="scriptheader.js"></script> 
-
-  </body>
-  
+        </main>
+        <footer>
+            <div class="footer">
+                <div class="col1">
+                <img src="CSS/logo.png" style="width: 40%;"></img>
+                <p>Creado por el amor a las milanesas</p>
+                <p>Av. Patria 293</p>
+                <a class="col1" href="Reservas.html">
+                  <div style="text-decoration: none; color:rgb(255, 255, 255)">Reserva acá</div>
+                </a>   
+                <a class="col1" href="menu.html">
+                  <div style="text-decoration: none; color:rgb(255, 255, 255)">Nuestra carta</div>
+                </a>   
+                </div>           
+                <div class="col2">
+                <h3>Redes Sociales</h3>
+                <p><i class="bi bi-facebook"></i> SacraMila</p>
+                <p><i class="bi bi-twitter"></i> SacraMila.Oficial</p>
+                <p><i class="bi bi-instagram"></i> ElTemploDeLaMilanesa</p>
+                <p><i class="bi bi-whatsapp"></i> (351) 482-2556</p>
+                </div>
+                <div class="col3">
+                    <h3>Contacto</h3>
+                    <form>
+                        <textarea class="userInput" placeholder="Nombre"></textarea>
+                        <br>
+                        <textarea class="userInput" placeholder="Correo Electronico"></textarea>
+                        <br>
+                        <textarea class="userInput" placeholder="Asunto"></textarea>
+                        <br>
+                        <textarea class="userInput" placeholder="Mensaje" style="width: 350px; height: 150px;"></textarea>
+                        <br>
+                        <button type="submit">Enviar</button>
+                    </form>
+                </div>
+            </div>
+        </footer>
+        <script src="scriptheader.js"></script>
+    </body>
 </html>
