--- a/conocenos.html
+++ b/conocenos.html
@@ -22,30 +22,13 @@
                 </a>
               </div>
         </header>
+
+        <div style="width: 100%;height: 15%; background-color: black;"></div>
+
         <main>
 
-        <div class="container">
-            <img src="CSS/fondo.jpg" style="width:100%;">
-        </div>
-        <div style="width: 100%;">
-            <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,m</p>
-            <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,m</p>
-            <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,m</p>
-            <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,m</p>
-            <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,m</p>
-            <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,m</p>
-            <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,m</p>
-            <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,m</p>
-            <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,m</p>
-            <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,m</p>
-            <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,m</p>
-            <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,m</p>
-            <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,m</p>
-            <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,m</p>
-            <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,m</p>
-            <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,m</p>
-            <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,m</p>
-            <p>pasdf,msañfmsfpasdf,msañfmsfpasdf,m</p>
+        <div>
+          <img src="CSS/chegusan.jpg" style="width: 50%;"/>
         </div>
 
         </main>
