--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       </a>
     </div>
 
+    <div style="width: 100%;height: 15%; background-color: black;"></div>
+
     <div class="container">
       <img src="CSS/fondo.jpg" style="width:100%;">
       <div class="centrado">Bienvenidos al Templo de la Milanesa</div>
