--- a/conocenos.html
+++ b/conocenos.html
@@ -25,13 +25,46 @@
 
         <div style="width: 100%;height: 15%; background-color: black;"></div>
 
-        <main>
+        <main style="height: 85%;background-color: rgb(75 ,30 ,30 );">
 
-        <div>
-          <img src="CSS/chegusan.jpg" style="width: 50%;"/>
+          <div class="flexbox1" style="width: 100%; height: 100%; color: white;">
+
+            <div style="background-image: url('CSS/chegusan.jpg'); width: 30%; height: 70%; background-size: 100% 100%; margin-left: 10%;"></div>
+            <div style="margin-left: 15%; width: 30%; font-size: 150%;">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nec elit faucibus, consectetur nisl in, dignissim est. Praesent eget interdum lacus. Maecenas laoreet justo risus, sit amet ultrices augue convallis eget. Vivamus rhoncus ligula ligula, vel sodales est vestibulum id. Proin quis elementum enim. Nam lorem turpis, ornare ac fermentum id, porta eget magna. Nulla molestie tempor lorem ut dapibus. Proin nec vestibulum turpis. </p>
+            </div>
+
+          </div>
+
+        </main>
+
+        <main style="height: 85%;background-color: rgb(215 ,55 ,55 );">
+
+          <div class="flexbox1" style="width: 100%; height: 100%; color: white; justify-content: space-evenly;">
+
+            <div style="width: 75%; font-size: 200%;">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nec elit faucibus, consectetur nisl in, dignissim est. Praesent eget interdum lacus. Maecenas laoreet justo risus, sit amet ultrices augue convallis eget. Vivamus rhoncus ligula ligula, vel sodales est vestibulum id. Proin quis elementum enim. Nam lorem turpis, ornare ac fermentum id, porta eget magna. Nulla molestie tempor lorem ut dapibus. Proin nec vestibulum turpis. </p>
+            </div>
+
+          </div>
+
+        </main>
+
+        <main style="height: 85%;background-color: rgb(160 ,50 ,50 );">
+
+          <div class="flexbox1" style="width: 100%; height: 100%; color: white;">
+
+            <div style="margin-left: 15%; width: 30%; font-size: 150%;">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nec elit faucibus, consectetur nisl in, dignissim est. Praesent eget interdum lacus. Maecenas laoreet justo risus, sit amet ultrices augue convallis eget. Vivamus rhoncus ligula ligula, vel sodales est vestibulum id. Proin quis elementum enim. Nam lorem turpis, ornare ac fermentum id, porta eget magna. Nulla molestie tempor lorem ut dapibus. Proin nec vestibulum turpis. </p>
+            </div>
+            <div style="background-image: url('CSS/chegusan.jpg'); width: 30%; height: 70%; background-size: 100% 100%; margin-left: 10%;"></div>
+
+          </div>
+          
         </div>
 
         </main>
+
         <footer>
             <div class="footer">
                 <div class="col1">
