--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 </a>
               </div>
         </header>
+
+        <div style="width: 100%;height: 15%; background-color: black;"></div>
+
           <div class="container">
             <img src="CSS/fondo.jpg" style="width:100%;">
             <div class="centrado">Bienvenidos al Templo de la Milanesa</div>
