--- a/conocenos.html
+++ b/conocenos.html
@@ -17,8 +17,8 @@
                 <a class="item" href="menu.html">
                   <div class="item">MENU</div>
                 </a>
-                <a class="item" href="menu.html">
-                  <div class="item">CONTACTO</div>
+                <a class="item" href="reserva.html">
+                  <div class="item">RESERVA</div>
                 </a>
               </div>
         </header>
