--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
       <link rel="stylesheet" href="CSS/estilos.css">
       <title>SacraMila - El Templo de la milanesa</title>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     </head>
     <body>
         <header>
@@ -17,8 +18,8 @@
                 <a class="item" href="menu.html">
                   <div class="item">MENU</div>
                 </a>
-                <a class="item" href="menu.html">
-                  <div class="item">CONTACTO</div>
+                <a class="item" href="reserva.html">
+                  <div class="item">RESERVA</div>
                 </a>
               </div>
         </header>
