--- a/reserva.html
+++ b/reserva.html
@@ -17,11 +17,14 @@
                 <a class="item" href="menu.html">
                   <div class="item">MENU</div>
                 </a>
-                <a class="item" href="menu.html">
-                  <div class="item">CONTACTO</div>
+                <a class="item" href="reserva.html">
+                  <div class="item">RESERVA</div>
                 </a>
               </div>
         </header>
+
+        <div style="width: 100%;height: 15%; background-color: black;"></div>
+
         <main>
 
         </main>
