--- a/conocenos.html
+++ b/conocenos.html
@@ -4,6 +4,8 @@
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
       <link rel="stylesheet" href="CSS/estilos.css">
       <title>SacraMila - El Templo de la milanesa</title>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+      <script src="reservahover.js"></script>
     </head>
     <body>
         <header>
@@ -30,8 +32,8 @@
           <div class="flexbox1" style="width: 100%; height: 100%; color: white;">
 
             <div style="background-image: url('CSS/chegusan.jpg'); width: 30%; height: 70%; background-size: 100% 100%; margin-left: 10%;"></div>
-            <div style="margin-left: 15%; width: 30%; font-size: 150%;">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nec elit faucibus, consectetur nisl in, dignissim est. Praesent eget interdum lacus. Maecenas laoreet justo risus, sit amet ultrices augue convallis eget. Vivamus rhoncus ligula ligula, vel sodales est vestibulum id. Proin quis elementum enim. Nam lorem turpis, ornare ac fermentum id, porta eget magna. Nulla molestie tempor lorem ut dapibus. Proin nec vestibulum turpis. </p>
+            <div style="margin-left: 15%; width: 30%; font-size: 200%;">
+              <p>SacraMila nació como una simple pasión por una comida tan noble y soberana como lo es nuestra querida milanesa.</p>
             </div>
 
           </div>
@@ -42,8 +44,12 @@
 
           <div class="flexbox1" style="width: 100%; height: 100%; color: white; justify-content: space-evenly;">
 
-            <div style="width: 75%; font-size: 200%;">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nec elit faucibus, consectetur nisl in, dignissim est. Praesent eget interdum lacus. Maecenas laoreet justo risus, sit amet ultrices augue convallis eget. Vivamus rhoncus ligula ligula, vel sodales est vestibulum id. Proin quis elementum enim. Nam lorem turpis, ornare ac fermentum id, porta eget magna. Nulla molestie tempor lorem ut dapibus. Proin nec vestibulum turpis. </p>
+            <div style="width: 45%; font-size: 250%;">
+              <p>Con experiencia adquirida a través de los años logramos cumplir el sueño de fundar este maravilloso lugar de encuentro, donde se lleva a cabo este rito.</p>
+            </div>
+
+            <div style="width: 45%; font-size: 250%;">
+              <p>Un lugar a donde todos los que deseen adorar a esta insuperable delicia puedan venir.. postrarse.. y recibir la salvacion de su crujiente suavidad. </p>
             </div>
 
           </div>
@@ -54,14 +60,26 @@
 
           <div class="flexbox1" style="width: 100%; height: 100%; color: white;">
 
-            <div style="margin-left: 15%; width: 30%; font-size: 150%;">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nec elit faucibus, consectetur nisl in, dignissim est. Praesent eget interdum lacus. Maecenas laoreet justo risus, sit amet ultrices augue convallis eget. Vivamus rhoncus ligula ligula, vel sodales est vestibulum id. Proin quis elementum enim. Nam lorem turpis, ornare ac fermentum id, porta eget magna. Nulla molestie tempor lorem ut dapibus. Proin nec vestibulum turpis. </p>
+            <div style="margin-left: 15%; width: 30%; font-size: 200%;">
+              <p>¿Qué esperás? Veni y date el gusto, llegate y unite a esta nuestra misa. Tal vez no encuentres acá la solución a tus problemas, pero todos saben que cualquier pesar es más pasadero... después de una buena mila.</p>
             </div>
-            <div style="background-image: url('CSS/chegusan.jpg'); width: 30%; height: 70%; background-size: 100% 100%; margin-left: 10%;"></div>
+            <div style="background-image: url('CSS/alplato.png'); width: 30%; height: 70%; background-size: 100% 100%; margin-left: 10%;"></div>
 
           </div>
           
         </div>
+
+        </main>
+
+        <main style="height: 20%;">
+
+          <div id="reservahover" class="flexbox1" style="width: 100%; height: 100%; justify-content: center; font-size: 300%;">
+
+          <a href="reserva.html" style="text-decoration: none; color: black;">
+            <div>RESERVA AHORA</div>
+          </a>
+
+          </div>
 
         </main>
 
