--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,8 @@
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
       <link rel="stylesheet" href="CSS/estilos.css">
       <title>SacraMila - El Templo de la milanesa</title>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+      <script src="reservahover.js"></script>
     </head>
     <body>
         <header>
@@ -28,6 +30,18 @@
         <main style="height: fit-content;">
                     
           <img src="CSS/menu.jpg" style="width: 100%;"/>
+
+        </main>
+
+        <main style="height: 20%;">
+
+          <div id="reservahover" class="flexbox1" style="width: 100%; height: 100%; justify-content: center; font-size: 300%;">
+
+          <a href="reserva.html" style="text-decoration: none; color: black;">
+            <div>RESERVA AHORA</div>
+          </a>
+
+          </div>
 
         </main>
         
