--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
 
           <div class="flexbox1" style="margin: 2.5%;">
             <img src="CSS/mila.png" style="float: left;width: 55%;">
-            <div style="float:right;margin-left: 10%;">
+            <div style="float:right;margin-left: 7%; font-size: xx-large;">
               <h1>Somos SacraMila</h1>
-              <h3>Sabemos que la veneras</h3>
-              <h3>Por eso nor encargamos de hacerle un templo</h3>
-              <h3>Somos expertos en milanesas</h3>
-              <h3>Desde la virgen Suprema</h3>
-              <h3>Hasta San Napolitana</h3>
-              <h3>Vení a adorar con amigos, con familia, o solo</h3>
-              <h3>La intención es lo que cuenta</h3>
-              <h3>Vos traé el apetito</h3>
-              <h3>Que nosotros te ponemos la iglesia</h3>
+              <p>Sabemos que la veneras
+              Por eso nor encargamos de hacerle un templo
+              Somos expertos en milanesas
+              Desde la virgen Suprema
+              Hasta San Napolitana
+              Vení a adorar con amigos, con familia, o solo
+              La intención es lo que cuenta
+              Vos traé el apetito
+              Que nosotros te ponemos la iglesia</p>
             </div>
           </div>
         <footer>
