--- a/reserva.html
+++ b/reserva.html
@@ -15,7 +15,7 @@
                   <div class="item">CONOCENOS</div>
                 </a>
                 <a class="item" href="menu.html">
-                  <div class="item">MENU</div>
+                  <div class="item">MENÚ</div>
                 </a>
                 <a class="item" href="reserva.html">
                   <div class="item">RESERVA</div>
@@ -25,7 +25,7 @@
 
         <div style="width: 100%;height: 15%; background-color: black;"></div>
 
-        <main class="containerflex">
+        <main class="containerrflex">
             <div class="containerr">
               <header>Reserva una fecha</header>
                 <div class="progress-bar">
@@ -52,7 +52,7 @@
                     </div>
                   </div>
                   <div class="form-princ">
-                    <form action="#">
+                <form id="form" action="#">
                       <!---PAGINA 1-->
                     <div class="pagina movPag">
                       <div class="titulo">Información Principal</div>
