--- a/conocenos.html
+++ b/conocenos.html
@@ -17,7 +17,7 @@
                   <div class="item">CONOCENOS</div>
                 </a>
                 <a class="item" href="menu.html">
-                  <div class="item">MENU</div>
+                  <div class="item">MENÚ</div>
                 </a>
                 <a class="item" href="reserva.html">
                   <div class="item">RESERVA</div>
