--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         </header>
 
         <div style="width: 100%;height: 15%; background-color: black;"></div>
-
+          <!--Titulo-->
           <div class="container">
             <img src="CSS/fondo.jpg" style="width:100%;">
             <div class="centrado">Bienvenidos al Templo de la Milanesa</div>
           </div>
-
+          <!--Presentación-->
           <div class="flexbox1" style="margin: 2.5%;">
             <img src="CSS/mila.png" style="float: left;width: 55%;">
             <div style="float:right;margin-left: 7%; font-size: xx-large;">
