--- a/reserva.html
+++ b/reserva.html
@@ -53,7 +53,7 @@
                   </div>
                   <div class="form-princ">
                 <form id="form" action="#">
-                      <!---PAGINA 1-->
+                      <!--PAGINA 1-->
                     <div class="pagina movPag">
                       <div class="titulo">Información Principal</div>
                       <div class="campo">
