--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                   <div class="item">CONOCENOS</div>
                 </a>
                 <a class="item" href="menu.html">
-                  <div class="item">MENÚ</div>
+                  <div class="item">CARTA</div>
                 </a>
                 <a class="item" href="reserva.html">
                   <div class="item">RESERVA</div>
