--- a/reserva.html
+++ b/reserva.html
@@ -15,7 +15,7 @@
                   <div class="item">CONOCENOS</div>
                 </a>
                 <a class="item" href="menu.html">
-                  <div class="item">MENÚ</div>
+                  <div class="item">CARTA</div>
                 </a>
                 <a class="item" href="reserva.html">
                   <div class="item">RESERVA</div>
@@ -119,10 +119,10 @@
                 <p>Creado por el amor a las milanesas</p>
                 <p>Av. Patria 293</p>
                 <a class="col1" href="Reservas.html">
-                  <div style="text-decoration: none; color:rgb(255, 255, 255)">Reserva acá</div>
+                  <div style="color:rgb(255, 255, 255)">Reserva acá</div>
                 </a>   
                 <a class="col1" href="menu.html">
-                  <div style="text-decoration: none; color:rgb(255, 255, 255)">Nuestra carta</div>
+                  <div style="color:rgb(255, 255, 255)">Nuestra carta</div>
                 </a>   
                 </div>           
                 <div class="col2">
