--- a/conocenos.html
+++ b/conocenos.html
@@ -17,7 +17,7 @@
                   <div class="item">CONOCENOS</div>
                 </a>
                 <a class="item" href="menu.html">
-                  <div class="item">MENÚ</div>
+                  <div class="item">CARTA</div>
                 </a>
                 <a class="item" href="reserva.html">
                   <div class="item">RESERVA</div>
@@ -71,7 +71,7 @@
 
         </main>
 
-        <main style="height: 20%;">
+        <main style="height: 20%; background-color: rgb(200 ,200 ,200 );">
 
           <div id="reservahover" class="flexbox1" style="width: 100%; height: 100%; justify-content: center; font-size: 300%;">
 
