--- a/index.html
+++ b/index.html
@@ -30,21 +30,24 @@
             <div class="centrado">Bienvenidos al Templo de la Milanesa</div>
           </div>
           <!--Presentación-->
-          <div class="flexbox1" style="margin: 2.5%;">
-            <img src="CSS/mila.png" style="float: left;width: 55%;">
-            <div style="float:right;margin-left: 7%; font-size: xx-large;">
+          <div class="flexbox1" style="width: 100%; height: 100%;">
+
+            <div style="background-image: url('CSS/mila.png'); width: 45%; height: 70%; background-size: 100% 100%; margin-left: 7.5%;"></div>
+            <div style="margin-left: 15%; width: 50%; font-size: 135%; line-height: 75%;">
               <h1>Somos SacraMila</h1>
-              <p>Sabemos que la veneras
-              Por eso nor encargamos de hacerle un templo
-              Somos expertos en milanesas
-              Desde la virgen Suprema
-              Hasta San Napolitana
-              Vení a adorar con amigos, con familia, o solo
-              La intención es lo que cuenta
-              Vos traé el apetito
-              Que nosotros te ponemos la iglesia</p>
+              <p>Sabemos que la veneras</p>
+              <p>Por eso nos encargamos de hacerle un templo</p>
+              <p>Somos expertos en milanesas</p>
+              <p>Desde la virgen Suprema</p>
+              <p>Hasta San Napolitana</p>
+              <p>Vení a adorar con amigos, con familia, o solo</p>
+              <p>La intención es lo que cuenta</p>
+              <p>Vos traé el apetito</p>
+              <p>  Que nosotros te ponemos la iglesia</p>
             </div>
+
           </div>
+
         <footer>
           <div class="footer">
               <div class="col1">
