--- a/conocenos.html
+++ b/conocenos.html
@@ -73,13 +73,9 @@
 
         <main style="height: 20%; background-color: rgb(200 ,200 ,200 );">
 
-          <div id="reservahover" class="flexbox1" style="width: 100%; height: 100%; justify-content: center; font-size: 300%;">
-
-          <a href="reserva.html" style="text-decoration: none; color: black;">
+          <a href="reserva.html" id="reservahover" class="flexbox1" style="text-decoration: none; color: black; width: 100%; height: 100%; justify-content: center; font-size: 300%;">
             <div>RESERVA AHORA</div>
           </a>
-
-          </div>
 
         </main>
 
