--- a/conocenos.html
+++ b/conocenos.html
@@ -32,8 +32,8 @@
           <div class="flexbox1" style="width: 100%; height: 100%; color: white;">
 
             <div style="background-image: url('CSS/chegusan.jpg'); width: 30%; height: 70%; background-size: 100% 100%; margin-left: 10%;"></div>
-            <div style="margin-left: 15%; width: 30%; font-size: 200%;">
-              <p>SacraMila nació como una simple pasión por una comida tan noble y soberana como lo es nuestra querida milanesa.</p>
+            <div style="margin-left: 15%; width: 30%; font-size: 4vw;">
+              SacraMila nació como una simple pasión por una comida tan noble y soberana como lo es nuestra querida milanesa.
             </div>
 
           </div>
