--- a/conocenos.html
+++ b/conocenos.html
@@ -6,6 +6,7 @@
       <title>SacraMila - El Templo de la milanesa</title>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
       <script src="reservahover.js"></script>
+      <script src="headerhover.js"></script>
     </head>
     <body>
         <header>
@@ -13,7 +14,7 @@
                 <a class="item" href="index.html"> 
                   <img src="CSS/logo.png" style="width: 50%;"/>
                 </a>
-                <a class="item" href="conocenos.html">
+                <a class="item" id="headerhover" href="conocenos.html">
                   <div class="item">CONOCENOS</div>
                 </a>
                 <a class="item" href="menu.html">
