--- a/conocenos.html
+++ b/conocenos.html
@@ -45,11 +45,11 @@
 
           <div class="flexbox1" style="width: 100%; height: 100%; color: white; justify-content: space-evenly;">
 
-            <div style="width: 45%; font-size: 250%;">
+            <div style="width: 45%; font-size: 4vw;">
               <p>Con experiencia adquirida a través de los años logramos cumplir el sueño de fundar este maravilloso lugar de encuentro, donde se lleva a cabo este rito.</p>
             </div>
 
-            <div style="width: 45%; font-size: 250%;">
+            <div style="width: 45%; font-size: 4vw;">
               <p>Un lugar a donde todos los que deseen adorar a esta insuperable delicia puedan venir.. postrarse.. y recibir la salvacion de su crujiente suavidad. </p>
             </div>
 
@@ -61,7 +61,7 @@
 
           <div class="flexbox1" style="width: 100%; height: 100%; color: white;">
 
-            <div style="margin-left: 15%; width: 30%; font-size: 200%;">
+            <div style="margin-left: 15%; width: 30%; font-size: 3vw;">
               <p>¿Qué esperás? Veni y date el gusto, llegate y unite a esta nuestra misa. Tal vez no encuentres acá la solución a tus problemas, pero todos saben que cualquier pesar es más pasadero... después de una buena mila.</p>
             </div>
             <div style="background-image: url('CSS/alplato.png'); width: 30%; height: 70%; background-size: 100% 100%; margin-left: 10%;"></div>
