--- a/conocenos.html
+++ b/conocenos.html
@@ -33,7 +33,7 @@
 
             <div style="background-image: url('CSS/chegusan.jpg'); width: 30%; height: 70%; background-size: 100% 100%; margin-left: 10%;"></div>
             <div style="margin-left: 15%; width: 30%; font-size: 4vw;">
-              SacraMila nació como una simple pasión por una comida tan noble y soberana como lo es nuestra querida milanesa.
+              <p>SacraMila nació como una simple pasión por una comida tan noble y soberana como lo es nuestra querida milanesa.</p>
             </div>
 
           </div>
