--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,7 @@
       <title>SacraMila - El Templo de la milanesa</title>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
       <script src="reservahover.js"></script>
+      <script src="headerhover.js"></script>
     </head>
     <body>
         <header>
@@ -13,13 +14,13 @@
                 <a class="item" href="index.html"> 
                   <img src="CSS/logo.png" style="width: 50%;"/>
                 </a>
-                <a class="item" href="conocenos.html">
+                <a class="item" id="headerhover1" href="conocenos.html" style="color: white;">
                   <div class="item">CONOCENOS</div>
                 </a>
-                <a class="item" href="menu.html">
+                <a class="item" id="headerhover2" href="menu.html" style="color: white;">
                   <div class="item">CARTA</div>
                 </a>
-                <a class="item" href="reserva.html">
+                <a class="item" id="headerhover3" href="reserva.html" style="color: white;">
                   <div class="item">RESERVA</div>
                 </a>
               </div>
@@ -35,13 +36,9 @@
 
         <main style="height: 20%; background-color: rgb(200 ,200 ,200 );">
 
-          <div id="reservahover" class="flexbox1" style="width: 100%; height: 100%; justify-content: center; font-size: 300%;">
-
-          <a href="reserva.html" style="text-decoration: none; color: black;">
+          <a href="reserva.html" id="reservahover" class="flexbox1" style="text-decoration: none; color: black; width: 100%; height: 100%; justify-content: center; font-size: 300%;">
             <div>RESERVA AHORA</div>
           </a>
-
-          </div>
 
         </main>
         
