--- a/index.html
+++ b/index.html
@@ -82,11 +82,12 @@
                       <br>
                       <textarea class="userInput" placeholder="Mensaje" style="width: 350px; height: 150px;"></textarea>
                       <br>
-                      <button type="submit">Enviar</button>
+                      <button id="botonfooter" type="submit">Enviar</button>
                   </form>
               </div>
           </div>
       </footer>
       <script src="scriptheader.js"></script>
+      <script src="botonformfooter.js"></script>
   </body>
 </html>
