--- a/conocenos.html
+++ b/conocenos.html
@@ -28,9 +28,9 @@
           <!--Fila 1--> 
         <div style="width: 100%;height: 15%; background-color: black;"></div>
 
-        <main style="height: 85%;background-color: rgb(75 ,30 ,30 );">
+        <main style="height: 85%;background-color: rgb(120, 20, 30);">
 
-          <div class="flexbox1" style="width: 100%; height: 100%; color: white;">
+          <div class="flexbox1" style="width: 100%; height: 100%; color: rgb(255, 255, 255);">
 
             <div style="background-image: url('CSS/chegusan.jpg'); width: 30%; height: 70%; background-size: 100% 100%; margin-left: 10%;"></div>
             <div style="margin-left: 15%; width: 30%; font-size: 4vw;">
@@ -41,9 +41,9 @@
 
         </main>
           <!--Fila 2--> 
-        <main style="height: 85%;background-color: rgb(215 ,55 ,55 );">
+        <main style="height: 85%;background-color: rgb(254, 250, 224);">
 
-          <div class="flexbox1" style="width: 100%; height: 100%; color: white; justify-content: space-evenly;">
+          <div class="flexbox1" style="width: 100%; height: 100%; color: rgb(0, 0, 0); justify-content: space-evenly;">
 
             <div style="width: 45%; font-size: 4vw;">
               <p>Con experiencia adquirida a través de los años logramos cumplir el sueño de fundar este maravilloso lugar de encuentro, donde se lleva a cabo este rito.</p>
@@ -57,9 +57,9 @@
 
         </main>
           <!--Fila 3--> 
-        <main style="height: 85%;background-color: rgb(160 ,50 ,50 );">
+        <main style="height: 85%;background-color: rgb(120, 20, 30);">
 
-          <div class="flexbox1" style="width: 100%; height: 100%; color: white;">
+          <div class="flexbox1" style="width: 100%; height: 100%; color: rgb(255, 255, 255);">
 
             <div style="margin-left: 15%; width: 30%; font-size: 3vw;">
               <p>¿Qué esperás? Veni y date el gusto, llegate y unite a esta nuestra misa. Tal vez no encuentres acá la solución a tus problemas, pero todos saben que cualquier pesar es más pasadero... después de una buena mila.</p>
@@ -72,9 +72,9 @@
 
         </main>
 
-        <main style="height: 20%; background-color: rgb(200 ,200 ,200 );">
+        <main style="height: 20%; background-color: rgb(254, 250, 224);">
 
-          <a href="reserva.html" id="reservahover" class="flexbox1" style="text-decoration: none; color: black; width: 100%; height: 100%; justify-content: center; font-size: 300%;">
+          <a href="reserva.html" id="reservahover" class="flexbox1" style="text-decoration: none; color: rgb(0, 0, 0); width: 100%; height: 100%; justify-content: center; font-size: 300%;">
             <div>RESERVA AHORA</div>
           </a>
 
