--- a/reserva.html
+++ b/reserva.html
@@ -14,19 +14,19 @@
                 <a class="item" href="index.html"> 
                   <img src="CSS/logo.png" style="width: 50%;"/>
                 </a>
-                <a class="item" id="headerhover1" href="conocenos.html" style="color: white;">
+                <a class="item" id="headerhover1" href="conocenos.html" style="color: rgb(255, 255, 255);">
                   <div class="item">CONOCENOS</div>
                 </a>
-                <a class="item" id="headerhover2" href="menu.html" style="color: white;">
+                <a class="item" id="headerhover2" href="menu.html" style="color: rgb(255, 255, 255);">
                   <div class="item">CARTA</div>
                 </a>
-                <a class="item" id="headerhover3" href="reserva.html" style="color: white;">
+                <a class="item" id="headerhover3" href="reserva.html" style="color: rgb(255, 255, 255);">
                   <div class="item">RESERVA</div>
                 </a>
               </div>
         </header>
 
-        <div style="width: 100%;height: 15%; background-color: black;"></div>
+        <div style="width: 100%;height: 15%; background-color: rgb(0, 0, 0);"></div>
 
         <main class="containerrflex">
             <div class="containerr">
