--- a/conocenos.html
+++ b/conocenos.html
@@ -26,7 +26,7 @@
               </div>
         </header>
           <!--Fila 1--> 
-        <div style="width: 100%;height: 15%; background-color: black;"></div>
+        <div style="width: 100%;height: 15%; background-color: rgb(0, 0, 0);"></div>
 
         <main style="height: 85%;background-color: rgb(120, 20, 30);">
 
