--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               </div>
         </header>
 
-        <div style="width: 100%;height: 15%; background-color: black;"></div>
+        <div style="width: 100%;height: 15%; background-color: rgb(0, 0, 0);"></div>
           <!--Titulo-->
           <div class="container">
             <img src="CSS/fondo.jpg" style="width:100%;">
