--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,7 @@
               </div>
         </header>
 
-        <div style="width: 100%;height: 15%; background-color: black;"></div>
+        <div style="width: 100%;height: 15%; background-color: rgb(0, 0, 0);"></div>
 
         <main style="height: fit-content;">
                     
@@ -36,7 +36,7 @@
 
         <main style="height: 20%; background-color: rgb(200 ,200 ,200 );">
 
-          <a href="reserva.html" id="reservahover" class="flexbox1" style="text-decoration: none; color: black; width: 100%; height: 100%; justify-content: center; font-size: 300%;">
+          <a href="reserva.html" id="reservahover" class="flexbox1" style="text-decoration: none; color: rgb(0, 0, 0); width: 100%; height: 100%; justify-content: center; font-size: 300%;">
             <div>RESERVA AHORA</div>
           </a>
 
