--- a/index.html
+++ b/index.html
@@ -28,15 +28,14 @@
 
         <div style="width: 100%;height: 15%; background-color: rgb(0, 0, 0);"></div>
           <!--Titulo-->
-          <div class="container">
+          <div class="container" style="background-color: rgb(254, 250, 224);">
             <img src="CSS/fondo.jpg" style="width:100%;">
             <div class="centrado">Bienvenidos al Templo de la Milanesa</div>
           </div>
           <!--Presentación-->
-          <div class="flexbox1" style="width: 100%; height: 100%;">
-
+          <div class="flexbox1" style="width: 100%; height: 100%; background-color: rgb(254, 250, 224);">
             <div style="background-image: url('CSS/mila.png'); width: 45%; height: 70%; background-size: 100% 100%; margin-left: 7.5%;"></div>
-            <div style="margin-left: 15%; width: 50%; font-size: 135%; line-height: 75%;">
+            <div style="margin-left: 15%; width: 50%; font-size: 2vw; line-height: 75%;">
               <h1>Somos SacraMila</h1>
               <p>Sabemos que la veneras</p>
               <p>Por eso nos encargamos de hacerle un templo</p>
@@ -46,11 +45,22 @@
               <p>Vení a adorar con amigos, con familia, o solo</p>
               <p>La intención es lo que cuenta</p>
               <p>Vos traé el apetito</p>
-              <p>  Que nosotros te ponemos la iglesia</p>
+              <p>  Que nosotros ponemos la iglesia</p>
             </div>
-
           </div>
-
+          <!--Mapa y Horarios-->
+          <div class="flexboxm" style="width: 100%; height: 100%;">
+            <div style="background-size: 100% 100%; margin-left: 7.5%;"></div>
+            <div id="mapa"></div>
+            <div style="margin-left: 15%; width: 50%; font-size: 2vw; line-height: 75%; color: rgb(254, 250, 224);">
+              <h1>Ubicacion del tempo y</h1>
+              <h1>horarios de misa</h1> 
+              <p>Av.Patria 293</p>
+              <p>Horarios:</p>
+              <p>Domingos-Jueves: 20:00 - 1:00</p>
+              <p>Viernes-Sabados: 20:00 - 3:30</p>
+            </div>
+          </div>
         <footer>
           <div class="footer">
               <div class="col1">
