--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <!--Mapa y Horarios-->
           <div class="flexboxm" style="width: 100%; height: 100%;">
             <div style="background-size: 100% 100%; margin-left: 7.5%;"></div>
-            <div id="mapa"></div>
+            <div id="mapa" style="width: 100%; height: 400px;"></div>
             <div style="margin-left: 15%; width: 50%; font-size: 2vw; line-height: 75%; color: rgb(254, 250, 224);">
               <h1>Ubicacion del tempo y</h1>
               <h1>horarios de misa</h1> 
