--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           <div class="flexboxm" style="width: 100%; height: 100%;">
             <div style="background-size: 100% 100%; margin-left: 7.5%;"></div>
             <div id="mapa"></div>
-            <div style="margin-left: 15%; width: 50%; font-size: 2vw; line-height: 75%; color: rgb(254, 250, 224);">
-              <h1>Ubicacion del tempo y</h1>
+            <div style="margin-left: 15%; width: 50%; font-size: 2vw; line-height: 75%; color: rgb(235, 230, 200);">
+              <h1>Ubicacion del templo y</h1>
               <h1>horarios de misa</h1> 
               <p>Av.Patria 293</p>
               <p>Horarios:</p>
