--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <div style="background-size: 100% 100%; margin-left: 7.5%;"></div>
             <div id="mapa"></div>
             <div style="margin-left: 15%; width: 50%; font-size: 2vw; line-height: 75%; color: rgb(235, 230, 200);">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.134739800351!2d-64.1602246880427!3d-31.41041357415725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a2a8dcf00a29%3A0xf6d6a2290033ce3!2sAv.%20Patria%20293%2C%20X5022CPD%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1681980564770!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               <h1>Ubicacion del templo y</h1>
               <h1>horarios de misa</h1> 
               <p>Av.Patria 293</p>
