--- a/reserva.html
+++ b/reserva.html
@@ -32,7 +32,7 @@
                 <img src="CSS/logo.png" style="width: 40%;"></img>
                 <p>Creado por el amor a las milanesas</p>
                 <p>Av. Patria 293</p>
-                <a class="col1" href="Reservas.html">
+                <a class="col1" href="Reserva.html">
                   <div style="color:rgb(255, 255, 255)">Reserva acá</div>
                 </a>   
                 <a class="col1" href="menu.html">
