--- a/reserva.html
+++ b/reserva.html
@@ -64,5 +64,6 @@
         </footer>
         <script src="scriptheader.js"></script>
         <script src="movimiento.js"></script>
+        <script src="botonformfooter.js"></script>
     </body>
 </html>
