--- a/menu.html
+++ b/menu.html
@@ -71,5 +71,6 @@
             </div>
         </footer>
         <script src="scriptheader.js"></script>
+        <script src="botonformfooter.js"></script>
     </body>
 </html>
