--- a/reserva.html
+++ b/reserva.html
@@ -27,40 +27,40 @@
         </header>
       
         <footer>
-            <div class="footer">
-                <div class="col1">
-                <img src="CSS/logo.png" style="width: 40%;"></img>
-                <p>Creado por el amor a las milanesas</p>
-                <p>Av. Patria 293</p>
-                <a class="col1" href="Reserva.html">
-                  <div style="color:rgb(255, 255, 255)">Reserva acá</div>
-                </a>   
-                <a class="col1" href="menu.html">
-                  <div style="color:rgb(255, 255, 255)">Nuestra carta</div>
-                </a>   
-                </div>           
-                <div class="col2">
-                <h3>Redes Sociales</h3>
-                <p><i class="bi bi-facebook"></i> SacraMila</p>
-                <p><i class="bi bi-twitter"></i> SacraMila.Oficial</p>
-                <p><i class="bi bi-instagram"></i> ElTemploDeLaMilanesa</p>
-                <p><i class="bi bi-whatsapp"></i> (351) 482-2556</p>
-                </div>
-                <div class="col3">
-                    <h3>Contacto</h3>
-                    <form>
-                        <textarea class="userInput" placeholder="Nombre"></textarea>
-                        <br>
-                        <textarea class="userInput" placeholder="Correo Electronico"></textarea>
-                        <br>
-                        <textarea class="userInput" placeholder="Asunto"></textarea>
-                        <br>
-                        <textarea class="userInput" placeholder="Mensaje" style="width: 350px; height: 150px;"></textarea>
-                        <br>
-                        <button type="submit">Enviar</button>
-                    </form>
-                </div>
-            </div>
+          <div class="footer">
+              <div class="col1">
+              <img src="CSS/logo.png" style="width: 40%;"></img>
+              <p>Creado por el amor a las milanesas</p>
+              <p>Av. Patria 293</p>
+              <a class="col1" href="Reserva.html">
+                <div style="text-decoration: none; color:rgb(255, 255, 255)">Reserva acá</div>
+              </a>   
+              <a class="col1" href="menu.html">
+                <div style="text-decoration: none; color:rgb(255, 255, 255)">Nuestra carta</div>
+              </a>   
+              </div>           
+              <div class="col2">
+              <h3>Redes Sociales</h3>
+              <p><i class="bi bi-facebook"></i> SacraMila</p>
+              <p><i class="bi bi-twitter"></i> SacraMila.Oficial</p>
+              <p><i class="bi bi-instagram"></i> ElTemploDeLaMilanesa</p>
+              <p><i class="bi bi-whatsapp"></i> (351) 482-2556</p>
+              </div>
+              <div class="col3">
+                  <h3>Contacto</h3>
+                  <form>
+                      <textarea class="userInput" placeholder="Nombre"></textarea>
+                      <br>
+                      <textarea class="userInput" placeholder="Correo Electronico"></textarea>
+                      <br>
+                      <textarea class="userInput" placeholder="Asunto"></textarea>
+                      <br>
+                      <textarea class="userInput" placeholder="Mensaje" style="width: 350px; height: 150px;"></textarea>
+                      <br>
+                      <button id="botonfooter" type="submit">Enviar</button>
+                  </form>
+              </div>
+          </div>
         </footer>
         <script src="scriptheader.js"></script>
         <script src="movimiento.js"></script>
