--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
       <link rel="stylesheet" href="CSS/estilos.css">
       <title>SacraMila - El Templo de la milanesa</title>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-      <script src="reservahover.js"></script>
-      <script src="headerhover.js"></script>
+      <script src="js/reservahover.js"></script>
+      <script src="js/headerhover.js"></script>
     </head>
     <body>
         <header>
@@ -97,7 +97,7 @@
               </div>
           </div>
         </footer>
-    <script src="scriptheader.js"></script>
-    <script src="botonformfooter.js"></script>
+    <script src="js/scriptheader.js"></script>
+    <script src="js/botonformfooter.js"></script>
   </body>
 </html>
