--- a/reserva.html
+++ b/reserva.html
@@ -5,8 +5,8 @@
       <link rel="stylesheet" href="CSS/estilos.css">
       <title>SacraMila - El Templo de la milanesa</title>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-      <script src="reservahover.js"></script>
-      <script src="headerhover.js"></script>
+      <script src="js/reservahover.js"></script>
+      <script src="js/headerhover.js"></script>
       <script src="https://kit.fontawesome.com/1462da097a.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -155,8 +155,8 @@
                 </div>
             </div>
           </footer>
-          <script src="movimiento.js"></script>
-          <script src="scriptheader.js"></script>
-          <script src="botonformfooter.js"></script>
+          <script src="js/movimiento.js"></script>
+          <script src="js/scriptheader.js"></script>
+          <script src="js/botonformfooter.js"></script>
       </body>
   </html>
