--- a/reserva.html
+++ b/reserva.html
@@ -79,7 +79,7 @@
                             <div class="titulo">Día de la reserva</div>
                             <div class="campo">
                                 <div class="label">Escoga el día de su reserva</div>
-                                <input type="date" id="Fechares" max="2023-12-31" value="2023-04-20">
+                                <input type="date" id="Fechares" min="2023-04-20" max="2023-12-31" value="2023-04-20">
                             </div>
                             <div class="campo">
                                 <div class="label">Horario de la reserva</div>
